# robotHuman

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  README.md  main_view_ui2.py  package.xml  test.txt
audioService/: CMakeLists.txt  record.py  speechtotext.py  speechtotextMicrophone.py  test.py
audioService/005_add_two_ints/: GetAudio.srv  add_two_ints_server
audioService/launch/: demo.launch
audioService/scripts/: add_two_ints_server.py
audioService/scripts/srv/: _GetAudio.py
audio_service/: CMakeLists.txt  package.xml
audio_service/launch/: demo.launch
audio_service/scripts/: add_two_ints_client  add_two_ints_server.py  audioService.py  audioServiceBlocking.py  myXML.py  test_microphone.py
audio_service/scripts/srv/: __init__.py
audio_service/srv/: GetAudio.srv
catkin_generated/: generate_cached_setup.py  setup_cached.sh
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
displayImage/: CMakeLists.txt  add_two_ints_client  package.xml  test.py  test1.py
displayImage/displayImage/: imageName.h  imageNameRequest.h  imageNameResponse.h  motor.h  motorRequest.h  motorResponse.h
displayImage/launch/: demo.launch
displayImage/scripts/: display_img.py  test.py
dynamixel_sdk_examples/src/: read_write_node.py
hello_python/scripts/: hello_python.py
motor/: CMakeLists.txt  add_two_ints_server.py  mainMenu.py  motorControllerRosInterface.py  motorsControllerRos.py  package.xml
motor/launch/: demo.launch  demoMotorOnline.launch
motor/motor/: MotorController.py  MotorTest.py  main.py  range_limits.py
motor/motorController/: MotorController.py
motor/srv/: motor.srv
motor/views/: menuView.py  motor.py
motors_controller/: .~lock.position.csv#  CMakeLists.txt  motors_controller_ros.py  motors_controller_ros1.py  motors_controller_ui.py  package.xml  position.csv  test.py
motors_controller/launch/: demoMotorOnline.launch  train.launch
motors_controller/motorController/: MotorController.py
motors_controller/srv/: moveRobotFile.srv
motors_controller/views/: a.ui  b.ui  base.py  menuView.py  motor.py  test.py
motors_controller/views/database/: pointsClass.py
motors_controller/views/ui/: menu.py
partb/: CMakeLists.txt  package.xml
partb/Constants/: POSITIONS.py
partb/Text/: CORSI_MSG.py  DIGITAL_SPAN_MSG.py
partb/data/: 2024-01-0811_28_21.134475  2024-01-0811_40_06.192821  2024-01-0811_55_44.062354  2024-01-0812_20_29.183390  2024-01-0812_27_59.491737  2024-01-0812_32_31.266416
partb/img/: monkey32
partb/launch/: demo.launch  demoOffline.launch  demoSmatt.launch
partb/ros_interface/: ros_interface.py
partb/utilities/: TableView.py  stats.py
resources/: menu.ui  motor.ui  page51.ui
resources/database/: base.py  create.py
robot_face/: CMakeLists.txt  extract_embeddings.py  package.xml  robot_face1.py
robot_face/launch/: demo.launch
robot_face/scripts/: robot_face.py
robot_face/srv/: imageName.srv  text2Speech.srv
t/: TableView.py  UiMainWindow.py  controller.py  exersiceB.py  exersiceC.py  main.py  msgList.py  partb.py  profiles2.csv  row.py  stats.py
unifiedGestureFingertipDetection/: 0623takephotos.py  CMakeLists.txt  detectFace.py  package.xml  real-time.py  real-time2 copy.py  real-time2.py  train.py  znotes.txt
unifiedGestureFingertipDetection/controller/: contact.py  detectFace.py
unifiedGestureFingertipDetection/launch/: demo.launch  demoMotorOnline.launch  new.launch  small.launch  train.launch
unifiedGestureFingertipDetection/msg/: RecognitionMsg.msg  fingers.srv
unifiedGestureFingertipDetection/output/: embeddings.pickle  le.pickle  recognizer.pickle
unifiedGestureFingertipDetection/output2/: embeddings.pickle  le.pickle  recognizer.pickle
unifiedGestureFingertipDetection/output3/: embeddings.pickle  le.pickle  le.pickle1  recognizer.pickle  recognizer.pickle1
unifiedGestureFingertipDetection/output6/: embeddings.pickle
unifiedGestureFingertipDetection/output7/: embeddings.pickle  le.pickle  recognizer.pickle
unifiedGestureFingertipDetection/srv/: face.srv  recognition.srv
unifiedGestureFingertipDetection/unified_detector/: CMakeLists.txt
userInterface/: demo.py  exampleUI.py  guiManual.py  mainMenu.py  package.xml
user_interface/: CMakeLists.txt  mainMenu.py  menu.py  my_json.txt  package.xml  readXML.py  start.py  startUI.py  test.json
(+158 files in other folders)
