<?xml version="1.0"?>
<package>
  <name>robot_face</name>
  <version>0.10.2</version>
  <description>
    This package attempts to show the features of ROS python API step-by-step,
    including using messages, servers, parameters, etc. These tutorials are compatible with the nodes in roscpp_tutorial.
  </description>
  <maintainer email="stergiosmat@gmail.com">Stergios Matthaiakis</maintainer>
  <license>BSD</license>

  <author email="stergiosmat@gmail.com">Stergios Matthaiakis</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <test_depend>roscpp_tutorials</test_depend>
</package>
